[gd_scene load_steps=3 format=3 uid="uid://cytmwf2jvje6p"]

[ext_resource type="Script" path="res://ui/hint_layer/hint_layer.gd" id="1_ulc6e"]
[ext_resource type="LabelSettings" uid="uid://bpr6t2q1y56ln" path="res://ui/themes/label_settings/info_label_settings.tres" id="2_n5fw6"]

[node name="HintLayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ulc6e")

[node name="Hint" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 820.0
offset_bottom = 328.0

[node name="BgPanel" type="Panel" parent="Hint"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Hint"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Hint/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Hint/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Item name"
label_settings = ExtResource("2_n5fw6")

[node name="DescriptionLabel" type="Label" parent="Hint/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Item description
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
label_settings = ExtResource("2_n5fw6")
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="DeadZone" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
